[package]
name = "triangle_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[features]
default = ["sdl2"]


[dependencies]
three-d = { path = "../../" }
three-d-asset = {path = "../pbr/three-d-asset-0.7.0", features = ["gltf", "hdr", "jpeg", "http", "png"] }
sdl2 = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "f2f1e29a416bcc22f2faf411866db2c8d9536308", optional = true, features = ["unsafe_textures", "bundled", "static-link"] }
sdl2-sys = { git = "https://github.com/doukutsu-rs/rust-sdl2.git", rev = "f2f1e29a416bcc22f2faf411866db2c8d9536308", optional = true, features = ["bundled", "static-link"] }



[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
